[package]
name = "rs-float2asn1"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasm]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.asn1-rs]
version = "0.7.1"
default-features = false
features = [
	"std",
]
